--- a/about.html
+++ b/about.html
@@ -2,22 +2,23 @@
 <html>
     <head>
 </head>
-<header>
-        <title> Dit ben ik! </title>
-</header>       
+        <title> Dit ben ik! </title>    
     </head>
-<main>    
     <body>
-       <h1>Ik ben Tanja, developer van deze webpagina.</h1>
-</main>    
+<header>      
+    <h1>Ik ben Tanja, developer van deze webpagina.</h1>
+</header>
+<nav>      
+    <img height="200" src="img/slack.jpg">
+    
+    <a href="index.html"><h2>Back to Home page<h/2></a>
+</nav> 
+<main>    
 <aside><
        <p> Ik houd van vliegen, koken en shoppen. Momenteel, volg ik een cursus aan Winc Academy.
        </p>
-/aside>       
-<nav>      
-       <img height="200" src="img/slack.jpg">
-       
-       <a href="index.html"><h2>Back to Home page<h/2></a>
-</nav>   
-    </body>
+</main>       
+</aside>       
+ 
+</body>
 </html>
